--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "smartcontent-cdk",
-  "version": "0.3.24",
+  "version": "0.3.25",
   "description": "SmartContent Creative Development Kit",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@bitbucket.org/dynamicdo/smartcontent-cdk.git"
   },
   "contributors": [
     {
