--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartcontent-cdk",
-  "version": "0.3.29",
+  "version": "0.4.0",
   "description": "SmartContent Creative Development Kit",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -36,6 +36,7 @@
     "postcss-url": "^5.1.2",
     "stream-browserify": "^2.0.1",
     "vinyl-fs": "^2.4.3",
-    "vue": "^1.0.26"
+    "vue": "^1.0.26",
+    "yarn": "^0.16.1"
   }
 }
