--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "smartcontent-cdk",
-  "version": "0.4.1",
-  "description": "SmartContent Creative Development Kit",
+  "version": "0.4.2",
+  "description": "SmartContent HTML Creative Development Kit",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/dynamicdo/smartcontent-cdk.git"
+    "url": "git+ssh://git@github.com:dynamic-do/smartcontent-cdk.git"
   },
   "contributors": [
     {
@@ -16,7 +16,7 @@
     }
   ],
   "license": "UNLICENSED",
-  "homepage": "https://bitbucket.org/dynamicdo/smartcontent-cdk#readme",
+  "homepage": "https://github.com/dynamic-do/smartcontent-cdk",
   "private": true,
   "dependencies": {
     "archiver": "^1.0.0",
