--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "laravel-elixir-webpack-official": "^1.0.8",
     "lodash": "^4.14.0",
     "moment": "^2.15.0",
+    "moment-duration-format": "^1.3.0",
     "postcss-url": "^5.1.2",
     "stream-browserify": "^2.0.1",
     "vinyl-fs": "^2.4.3",
