--- a/package.json
+++ b/package.json
@@ -17,23 +17,37 @@
   ],
   "license": "UNLICENSED",
   "homepage": "https://github.com/dynamicdo/smartcontent-cdk",
+  "devDependencies": {
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2017": "^6.24.1",
+    "copy-webpack-plugin": "^4.2.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "on-build-webpack": "^0.1.0",
+    "postcss-loader": "^2.0.8",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "vue-template-compiler": "^2.5.2",
+    "vue-template-loader": "^0.3.1",
+    "webpack": "^3.8.1",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dev-server": "^2.9.3",
+    "webpack-merge": "^4.1.1",
+    "webpack-zip-files-plugin": "^1.0.0"
+  },
   "dependencies": {
-    "archiver": "^1.0.0",
-    "buble": "^0.12.5",
     "del": "^2.2.1",
     "emoji-regex": "^6.0.0",
-    "gulp": "^3.9.1",
-    "gulp-inline-source": "^3.0.0",
-    "gulp-postcss": "^6.1.1",
-    "gulp-template": "^4.0.0",
     "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-16",
-    "laravel-elixir-webpack-official": "^1.0.10",
     "lodash": "^4.14.0",
     "moment": "^2.15.0",
-    "postcss-url": "^5.1.2",
-    "stream-browserify": "^2.0.1",
-    "vinyl-fs": "^2.4.3",
     "vue": "^1.0.26"
   }
 }
