--- a/package.json
+++ b/package.json
@@ -18,12 +18,6 @@
   "license": "UNLICENSED",
   "homepage": "https://github.com/dynamicdo/smartcontent-cdk",
   "dependencies": {
-    "del": "^2.2.1",
-    "emoji-regex": "^6.0.0",
-    "jquery": "^3.1.0",
-    "lodash": "^4.14.0",
-    "moment": "^2.15.0",
-    "vue": "^1.0.26",
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -32,14 +26,21 @@
     "babel-preset-es2017": "^6.24.1",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
+    "del": "^2.2.1",
+    "emoji-regex": "^6.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.1.0",
+    "lodash": "^4.14.0",
+    "moment": "^2.15.0",
     "node-sass": "^4.5.3",
     "on-build-webpack": "^0.1.0",
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "vue": "^1.0.26",
     "vue-template-compiler": "^2.5.2",
     "vue-template-loader": "^0.3.1",
     "webpack": "^3.8.1",
