--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "del": "^2.2.1",
@@ -44,7 +45,6 @@
     "vue-template-compiler": "^2.5.2",
     "vue-template-loader": "^0.3.1",
     "webpack": "^3.8.1",
-    "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-server": "^2.9.3",
     "webpack-merge": "^4.1.1",
     "webpack-zip-files-plugin": "^1.0.0"
