--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "emoji-regex": "^6.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.1.0",
     "lodash": "^4.14.0",
